[gd_scene load_steps=4 format=3 uid="uid://b8lhver4agfuj"]

[ext_resource type="Script" path="res://scenes/ui/user_interface.gd" id="1_sjmm3"]
[ext_resource type="FontFile" uid="uid://bjp8s34ntffc7" path="res://graphics/fonts/Oseon-Regular.ttf" id="2_gd1ly"]
[ext_resource type="Texture2D" uid="uid://bnnn1knig8gme" path="res://graphics/backgrounds/die_02.png" id="2_ocn7x"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjmm3")

[node name="MessageBox" type="TextEdit" parent="."]
layout_mode = 0
offset_left = -493.0
offset_top = 79.0
offset_right = 492.0
offset_bottom = 312.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="MessageBoxTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Look" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -579.0
offset_top = 83.0
offset_right = -500.0
offset_bottom = 150.0

[node name="LookButtonBackground" type="Sprite2D" parent="Look"]
position = Vector2(41, 34.5)
scale = Vector2(0.0527639, 0.271127)
texture = ExtResource("2_ocn7x")

[node name="LookButtonLabel" type="Label" parent="Look"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 75.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gd1ly")
theme_override_font_sizes/font_size = 31
text = "Inspect
Doors"

[node name="Touch" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -577.0
offset_top = 162.0
offset_right = -500.0
offset_bottom = 227.0

[node name="TouchButtonBackground" type="Sprite2D" parent="Touch"]
position = Vector2(39.2897, 34.5405)
scale = Vector2(0.0536561, 0.270842)
texture = ExtResource("2_ocn7x")

[node name="TouchButtonLabel" type="Label" parent="Touch"]
layout_mode = 0
offset_left = 5.0
offset_right = 72.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gd1ly")
theme_override_font_sizes/font_size = 31
text = "Touch
Doors"

[node name="Hear" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -572.0
offset_top = 240.0
offset_right = -498.0
offset_bottom = 299.0

[node name="ListenButtonBackgound" type="Sprite2D" parent="Hear"]
position = Vector2(35, 32.5)
scale = Vector2(0.0502513, 0.25)
texture = ExtResource("2_ocn7x")

[node name="ListenButtonLabel" type="Label" parent="Hear"]
layout_mode = 0
offset_left = 3.0
offset_right = 70.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gd1ly")
theme_override_font_sizes/font_size = 31
text = "Listen
Doors"

[connection signal="timeout" from="MessageBoxTimer" to="." method="_on_message_box_timer_timeout"]
[connection signal="button_up" from="Look" to="." method="_on_look_button_up"]
[connection signal="button_up" from="Touch" to="." method="_on_touch_button_up"]
[connection signal="button_up" from="Hear" to="." method="_on_hear_button_up"]
